# tracelin

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: langgraph_race_harness.py  repro.sh
tests/: conftest.py  test_a2a_lifecycle.py  test_adapters.py  test_cli.py  test_differential.py  test_e2e_real.py  test_engine.py  test_golden.py  test_hb.py  test_history.py  test_linearizable.py  test_mast.py  test_negative.py  test_objects.py  test_oracle.py  test_properties.py  test_witness.py
tests/fixtures/: langgraph_raw.jsonl
tracelin/: __init__.py  cli.py  engine.py  hb.py  history.py  mast.py  objects.py  oracle.py  verdict.py  witness.py
tracelin/adapters/: __init__.py  langgraph.py  otel_genai.py
tracelin/specs/: __init__.py  a2a_lifecycle.py  linearizable.py
