[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracelin"
version = "0.1.0a1"
description = "Conformance & race linter for recorded multi-agent agent traces (linearizability + happens-before + MAST failure-mode categories under the hood)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "hinanohart" }]
keywords = [
  "multi-agent",
  "observability",
  "linearizability",
  "happens-before",
  "opentelemetry",
  "linter",
  "trace",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: System :: Monitoring",
]
# core is pure standard library — no runtime dependencies.
dependencies = []

[project.optional-dependencies]
langgraph = ["langgraph>=0.2"]
otel = ["opentelemetry-sdk>=1.20"]
dev = [
  "pytest>=8",
  "hypothesis>=6.100",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
tracelin = "tracelin.cli:main"

[project.urls]
Homepage = "https://github.com/hinanohart/tracelin"
Repository = "https://github.com/hinanohart/tracelin"

[tool.hatch.build.targets.wheel]
packages = ["tracelin"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["tracelin", "tests"]
extend-exclude = ["experiments"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# functional TypedDict is required: a class-body annotation referencing the
# local `reducer` fails langgraph's get_type_hints at runtime.
"examples/langgraph_race_harness.py" = ["UP013"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["tracelin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["tracelin"]
branch = true
omit = ["tracelin/cli.py"]

[tool.coverage.report]
show_missing = true
